--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
 
-    <script src="ts/main.ts" defer type="module"></script>
-    <link rel="stylesheet" href="scss/main.scss" />
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+
+  <!-- <script src="ts/main.ts" defer type="module"></script> -->
+  <script src="ts/vg.ts" defer type="module"></script>
+  <script src="ts/g.ts" defer type="module"></script>
+
+
+  <link rel="stylesheet" href="scss/main.scss" />
+
+</head>
+
+<body></body>
+
 </html>
