--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
 
-  <!-- <script src="ts/main.ts" defer type="module"></script> -->
-  <script src="ts/vg.ts" defer type="module"></script>
-  <script src="ts/g.ts" defer type="module"></script>
-
-
+  <script src="ts/main.ts" defer type="module"></script>
   <link rel="stylesheet" href="scss/main.scss" />
 
 </head>
